--- a/main.html
+++ b/main.html
@@ -3,17 +3,21 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Image Switch with Canvas</title>
+  <title>4반 키우기</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <div class="container">
+    <h1>4반 키우기</h1>
     <!-- 캔버스 -->
     <canvas id="imageCanvas"></canvas>
-
+    <h1 id="imageName">+2 원영이의 방사능 홍차</h1>
+    <br>
+    <h2 id="result"></h2>
     <!-- 버튼 -->
     <button id="switchButton" onclick="strengthen()">강화하기</button>
     <button id="GotoTraining" onclick="openTraining()">훈련장</button>
+    <button id="GotoShop" onclick="openShop()">상점</button>
 
     <!-- 모달과 오버레이 -->
     <div id="overlay" onclick="closeTraining()"></div>
