상점 레이어 추가 밎 각 레이어 수정
레이어 크기 수정해놨고 닫기 버튼 오른쪽 위에 배치했음 그리고 환영합니다 문구 폰트 키워놨고 닫기 버튼 색깔 구별 해놨어

--- a/main.html
+++ b/main.html
@@ -22,9 +22,15 @@
     <!-- 모달과 오버레이 -->
     <div id="overlay" onclick="closeTraining()"></div>
     <div id="modal">
-      <p>훈련장에 오신 것을 환영합니다!</p>
-      <button onclick="closeTraining()">닫기</button>
+      <p id="welcome">훈련장에 오신 것을 환영합니다!</p>
+      <button id="close" onclick="closeTraining()">닫기</button>
     </div>
+
+    <!-- 샵과 오버레이2-->
+    <div id="overlay2" onclick="closeShop()"></div>
+    <div id="modal2">
+      <p id="welcome">상점에 오신 것을 환영합니다!</p>
+      <button id="close" onclick="closeShop()">닫기</button>
   </div>
   <script src="script.js"></script>
 </body>
