--- a/main.html
+++ b/main.html
@@ -24,8 +24,8 @@
       <button id="close" onclick="closeTraining()">닫기</button>
       <button id="swing">Swing</button>
       <div id="canvas-container">
-        <canvas id="husuabi" width="620" height="500"></canvas>
-        <canvas id="swingCanvas" width="620" height="500"></canvas>
+        <canvas id="husuabi"></canvas>
+        <canvas id="swingCanvas"></canvas>
       </div>
     </div>
 
